--- a/templates/principal/index.html
+++ b/templates/principal/index.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 					
 
-					<li class="grid"><a href="contact.html">Contacto</a></li>					
+					<li class="grid"><a href="/admin/">Administracion</a></li>					
 
 				</ul>				
 
