caja gris de texto agregada

--- a/templates/principal/index.html
+++ b/templates/principal/index.html
@@ -107,9 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 					
 
-					
-
-					
+										
 
 					<li class="grid"><a href="/admin/">Administracion</a></li>					
 
@@ -205,8 +203,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="contact">
 	  <div class="container">
 		 <ol class="breadcrumb">
-		  <li><p>Hola como estas esta es una compania de iluminacion basada en leds para ahorro de energia</p>	</li>
-		  <li class="active">Contacto</li>
+		  <li>
+		  	<h3><br>Titulo (Logotipo)<br></h3>
+		  	<h4><br>Hola como estas esta es una compania de iluminacion basada en leds para ahorro de energia Maecenas nec auctor sem. Vivamus porttitor tincidunt elementum nisi a, euismod rhoncus urna. Curabitur scelerisque vulputate arcu eu pulvinar. Fusce vel neque diam Maecenas nec auctor sem. Vivamus porttitor tincidunt elementum nisi a, euismod rhoncus urna. Curabitur scelerisque vulputate arcu eu pulvinar. Fusce vel neque diam Maecenas nec auctor sem. Vivamus porttitor tincidunt elementum nisi a, euismod rhoncus urna. Curabitur scelerisque vulputate arcu eu pulvinar. Fusce vel neque diam</h4>	
+		  	<h3><br><br><br>(Imagenes)<br><br><br><br><br></h3>
+		  	<h4>Maecenas nec auctor sem. Vivamus porttitor tincidunt elementum nisi a, euismod rhoncus urna. Curabitur scelerisque vulputate arcu eu pulvinar. Fusce vel neque diam Maecenas nec auctor sem. Vivamus porttitor tincidunt elementum nisi a, euismod rhoncus urna. Curabitur scelerisque vulputate arcu eu pulvinar. Fusce vel neque diam</h4>
+
+		  </li>
+		  
 		 </ol>
 			<!--start contact-->
 			<h3>Contactanos</h3>
