--- a/templates/principal/index.html
+++ b/templates/principal/index.html
@@ -108,9 +108,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 
 										
-
-					<li class="grid"><a href="/admin/">Administracion</a></li>					
-
+					{% if user.is_authenticated %}
+						<li class="grid"><a href="/admin/">Administracion</a></li>					
+					{% endif %}
 				</ul>				
 
 			 </div>
